civil war in russia finished

--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -2864,7 +2864,7 @@
  SOV_gerasimov: "Kazan Military District"
  SOV_volodin: "Emergency Government of Saint Petersburg"
  SOV_udaltsov: "Stalingrad Soviet Republic"
- SOV_yashi: "Northen Republic"
+ SOV_yashi: "Northern Republic"
  SOV_shoigu: "Tuvan Military District"
  #Russian Autonomies
  autonomy_republic_rf: "Republic of Federal Significance"
@@ -5093,4 +5093,32 @@
  SOV_reunification_minus_10: "§RThis will decrease unification progress by 10§!"
 
  pmc_african_corps_TT: "§Y[SOV.GetFlag]The Afrika Korps§! battalion is not §Ghired§!"
+
+ russia.108.t: "Military Mutiny of the Generals"
+ russia.108.d: "Our coming to power clearly did not suit many segments of the population and the Russian authorities. But what happened was clearly a surprise to us. Generals Shoigu and Gerasimov hastily left Moscow and gathered loyalists in Tatarstan and Tuva and declared war on us..."
+ russia.108.a: "Damn Traitors!"
+ russia.109.t: "Rosgvardia Started a Riot"
+ russia.109.d: "The rebellion of General Shoigu and Gerasimov has finally shaken our country. Now everything was clear, a new civil war had begun. The head of the Rosgvardia, Zolotov, began his rebellion with his loyal soldiers against our government"
+ russia.109.a: "The Guard of Traitors!"
+ russia.110.t: "The Government Has Betrayed Us"
+ russia.110.d: "Government officials led by Volodin announced the imposition of martial law in the regions under their control. The army was completely split. Now we must also fight with loyal officials of the armed forces"
+ russia.110.a: "Officials Are Like Rats"
+ russia.111.t: "The Communist Uprising"
+ russia.111.d: "Volgograd turned out to be a stronghold of the future communist uprising. Several regions have announced the separation and creation of their own analogue of the USSR...A new enemy has appeared on the board"
+ russia.111.a: "Now there are these"
+ russia.112.t: "The New Chechen War"
+ russia.112.d: "The Chechen government declared war on us, they renounced their allegiance to Russia and declared that they would not defend such a country, one that could not ensure their existence"
+ russia.112.a: "This Time We Need to Finish Them Off"
+ russia.113.t: "Angry Patriots Rise Up"
+ russia.113.d: "Igor Strelkov, a well-known military man, volunteer, patriot, soldier who has gone through many wars, arrived in Donetsk the other day and said that the residents of Donbass should fight against us, against the government of criminals and thieves."
+ russia.113.a: "Donbass has betrayed us.."
+ russia.114.t: "Siberia is Rising"
+ russia.114.d: "Siberian activists organize their republic in the Far East and declare the non-recognition of our government. Now we are almost cut off from the Far East"
+ russia.114.a: "We'll get to them.."
+ russia.115.t: "The Return of the Ural Republic"
+ russia.115.d: "The Ural Republic - the project of Governor Rossel in the late 90s was ruined by Yeltsin. Now revanchism has ignited in the hearts of the Uralians and they are reviving the former republic again"
+ russia.115.a: "The Urals will pay for it."
+ russia.116.t: "The Uprising in the North"
+ russia.116.d: "Even the liberals were able to grab a piece for themselves in such chaos. A government was formed from liberal activists in the North of Russia, they intend to destroy us"
+ russia.116.a: "Even these?!"
  NOV_limonka: "Novorossiya"
