--- a/localisation/english/MD_countries_cosmetic_l_english.yml
+++ b/localisation/english/MD_countries_cosmetic_l_english.yml
@@ -3701,6 +3701,29 @@
  PBL_AUTH_SS_fascism_ADJ: "Peru-Bolivian"
  PBL_AUTH_SS_communism_ADJ: "Peru-Bolivian"
  
+ PMR_monarchy: "Duchy of Transnistria"
+ PMR_Moldova: "Republic of Moldova"
+ PMR_republic: "Republic of Transnistria"
+ PMR_russia: "Republic of Transnistria"
+ PMR_soviet: "Transnistrian SSR"
+ PMR_sheriff: "The Corporate State Sheriff"
+
+ PMR_rusempire_fascism: "Russia"
+ PMR_rusempire_fascism_DEF: "Russia"
+ PMR_rusempire_democratic: "Russia"
+ PMR_rusempire_democratic_DEF: "Russia"
+ PMR_rusempire_communism: "Russia"
+ PMR_rusempire_communism_DEF: "Russia"
+ PMR_rusempire_neutrality: "Russia"
+ PMR_rusempire_neutrality_DEF: "Russia"
+ PMR_rusempire_fascism_ADJ: "Russia"
+ PMR_rusempire_democratic_ADJ: "Russia"
+ PMR_rusempire_communism_ADJ: "Russia"
+ PMR_rusempire: "Russia"
+ PMR_rusempire_nationalist: "Russia"
+ PMR_rusempire_nationalist_DEF: "Russia"
+ PMR_rusempire_nationalist_ADJ: "Russia"
+ 
  #Hezbollah
  ISLAMIC_REPUBLIC_OF_LEBANON: "Islamic Republic of Lebanon"
  ISLAMIC_REPUBLIC_OF_LEBANON_ADJ: "Lebanese"
