--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -5801,7 +5801,7 @@
  LAG_fascism: "Latgale"
  LAG_fascism_DEF: "Latgale"
  LAG_democratic: "Latgale"
- LAG_democratic_DEF: ""Latgale"
+ LAG_democratic_DEF: "Latgale"
  LAG_neutrality: "Latgale"
  LAG_neutrality_DEF: "Latgale"
  LAG_communism: "Latgale"
