--- a/localisation/simp_chinese/MD_countries_cosmetic_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_countries_cosmetic_l_simp_chinese.yml
@@ -3516,3 +3516,24 @@
  AQY_autonomy_uar_state: "也门州"
  AQY_autonomy_uar_province: "也门省"
  AQY_autonomy_uar_regional_command: "也门复兴党地区指挥部"
+ PMR_monarchy: "德涅斯特河沿岸公国"
+ PMR_Moldova: "摩尔多瓦共和国"
+ PMR_republic: "德涅斯特河沿岸共和国"
+ PMR_russia: "德涅斯特河沿岸共和国"
+ PMR_soviet: "德涅斯特河沿岸苏维埃社会主义共和国"
+ PMR_sheriff: "谢里夫企业国"
+ PMR_rusempire_fascism: "俄罗斯"
+ PMR_rusempire_fascism_DEF: "俄罗斯"
+ PMR_rusempire_democratic: "俄罗斯"
+ PMR_rusempire_democratic_DEF: "俄罗斯"
+ PMR_rusempire_communism: "俄罗斯"
+ PMR_rusempire_communism_DEF: "俄罗斯"
+ PMR_rusempire_neutrality: "俄罗斯"
+ PMR_rusempire_neutrality_DEF: "俄罗斯"
+ PMR_rusempire_fascism_ADJ: "俄罗斯"
+ PMR_rusempire_democratic_ADJ: "俄罗斯"
+ PMR_rusempire_communism_ADJ: "俄罗斯"
+ PMR_rusempire: "俄罗斯"
+ PMR_rusempire_nationalist: "俄罗斯"
+ PMR_rusempire_nationalist_DEF: "俄罗斯"
+ PMR_rusempire_nationalist_ADJ: "俄罗斯"
