--- a/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
@@ -3046,14 +3046,12 @@
  Sov_warsaw_pact.15.d: "我们的主要盟友俄罗斯最近发生的事件使得我们有可能退出她的势力范围。现在它的领导层正在处理内部问题而不是外部问题，我们可以继续与它结盟，也可以走我们自己的发展道路。哪个更适合我们呢？"
  Sov_warsaw_pact.15.a: "俄罗斯不再是我们的盟友"
  Sov_warsaw_pact.15.b: "我们将留下"
- SOV_rusrevoult_estonia: "§Y[EST.GetNameWithFlag]§!发生俄罗斯革命"
  SOV_rusrevoult_kazah: "§Y[KAZ.GetNameWithFlag]§!发生俄罗斯革命"
- SOV_rusrevoult_belarus: "§Y[BLR.GetNameWithFlag]§!发生俄罗斯革命"
- SOV_rusrevoult_ukraine: "§Y[UKR.GetNameWithFlag]§!发生俄罗斯革命"
- SOV_rusrevoult_latvia: "§Y[LAT.GetNameWithFlag]§!发生俄罗斯革命"
+ SOV_rusrevoult_ukraine: "§Y[NOV.GetNameWithFlag]§!发生俄罗斯革命"
+ SOV_rusrevoult_latvia: "§Y[LAG.GetNameWithFlag]§!发生俄罗斯革命"
  SOV_rusrevoult_annex_republic: "吞并乌克兰南部各共和国"
  SOV_nazbol_inner_category: "苏维埃帝国之路"
- SOV_nazbol_inner_category_desc: "在我们能够在世界各地做出伟大的事情之前，我们需要改革国家和民族。"
+ SOV_nazbol_inner_category_desc: "\n\n\n\n\n\n£SOV_desctext_nazbol\n\n\n\n\n\n\n\n\n在我们[SOV.GetFlag]§Y国家§!经历过许多§R战乱与纷争§!。我们的政权更迭，从§g沙皇制§!到§R共产主义§!，现在是不是该寻找§Y中间地带§!以摆脱所有这些混乱，让我们的国家恢复昔日的§Y伟大§!？\n\n[InterLegion_SOV_loc]"
  SOV_nazbol_start_police: "安抚民族布尔什维克战斗小队"
  SOV_nazbol_start_police_desc: "我们党的上台，引起了国家的混乱。民兵分队不再是国家对暴力的合法垄断。我们的战斗小队现在应该取代他们。"
  SOV_nazbol_republicks: "终结“联邦制”"
@@ -3717,9 +3715,6 @@
  SOV_natlegion_tt: "新招募的人数将按§Y[?modify_natlegion]§!\n"
  SOV_natlegion_recruit_2000: "[SOV.GetFlag]可招募的人数为2000人"
  SOV_natlegion_recruit_TT: "§R外籍军团新兵§!数量为§Y[?SOV.natlegion]§!"
- SOV_legion_brigade: "创建一个新的外籍军团营"
- SOV_legion_campaign: "开展外国人招募活动"
- InterLegion_SOV_loc_tt: "创建一个新的外籍军团营"
  russia.61.t: ""
  russia.61.d: ""
  russia.61.a: ""
@@ -3789,8 +3784,6 @@
  Sov_warsaw_pact.16.t: "起义的成功"
  Sov_warsaw_pact.16.d: "在历史盟友的帮助下，我们成功地掌握了主动权，占领了东德的关键指挥和行政设施。华沙条约以保护我们的主权作为战略合作的交换条件。"
  Sov_warsaw_pact.16.a: "荣耀归于东德和人民！"
- SOV_nazbol_category: "俄罗斯革命"
- SOV_nazbol_category_desc: "我们将把所有俄罗斯人团结在一面旗帜下，在革命的火焰中我们将把他们从强加的边界中解放出来。"
  SOV_eu_state: "真实的西方国家"
  SOV_new_pensions_reform: "新的年金改革"
  SOV_demonopolisation_reform: "战略产业的去垄断"
@@ -4590,3 +4583,43 @@
  SOV_interbrigade_idea: "国际纵队"
  SOV_ruralisation_idea: "乡村化"
  SOV_revoult_spirits_idea: "革命精神"
+ sov_nationalists.9.t: ""
+ sov_nationalists.9.d: ""
+ sov_nationalists.9.a: ""
+ SOV_rusrevoult_crimea: "§Y[CRM.GetNameWithFlag]§!发生俄罗斯革命"
+ SOV_nazbols_belarus_friend: "白俄罗斯联盟"
+ SOV_nazbols_belarus_friend_desc: "白俄罗斯一直并将永远是我们的兄弟国家，我们将加强在白俄罗斯的影响力并加速建立联盟国家."
+ SOV_nazbols_novorossia_annex: "新俄罗斯返回故乡港口"
+ SOV_nazbols_novorossia_annex_desc: "新俄罗斯长期以来一直处于那些不公正地接受苏联当局赠送的该地区的人的统治之下，但现在我们将解决这个问题."
+ SOV_nazbols_latgale_annex: "拉特加尔地区"
+ SOV_nazbols_latgale_annex_desc: "我们正在将拉特盖尔吞并回俄罗斯。拉特加利亚人长期以来一直表现出亲俄情绪，我们利用了这一点。"
+ SOV_nazbols_kazah_war: "解放北哈萨克斯坦"
+ SOV_nazbols_kazah_war_desc: "哈萨克斯坦北部居住着很多讲俄语的人，但这里的简单骚乱将被明确镇压，因此我们将在该地区发起全面的军事行动。"
+ russia.108.t: "将军的军事叛变"
+ russia.108.d: "我们的上台显然不适合许多民众和俄罗斯当局。 但发生的事情显然让我们感到惊讶。绍伊古和格拉西莫夫将军匆忙离开莫斯科，在鞑靼斯坦和图瓦聚集效忠者，向我们宣战……"
+ russia.108.a: "该死的叛徒！"
+ russia.109.t: "国民近卫军开始暴乱"
+ russia.109.d: "绍伊古将军和格拉西莫夫将军的叛乱终于震动了我们的国家。现在一切都清楚了，一场新的内战已经开始。国民近卫军首领佐洛托夫开始带领他忠诚的士兵反抗我们的政府。"
+ russia.109.a: "叛徒的守卫！"
+ russia.110.t: "政府已经背叛我们"
+ russia.110.d: "以沃洛丁为首的政府官员宣布在其控制的地区实行戒严。军队彻底分裂。 现在我们还必须与武装部队的忠诚官员一起战斗。"
+ russia.110.a: "军官们就像鼠辈"
+ russia.111.t: "共产主义者起义"
+ russia.111.d: "伏尔加格勒事实证明是未来共产主义起义的据点。几个地区已经宣布分离并创建自己的苏联类似物......一个新的敌人出现在棋盘上。"
+ russia.111.a: "现在有这些"
+ russia.112.t: "新的车臣战争"
+ russia.112.d: "车臣政府向我们宣战，他们放弃了对俄罗斯的效忠，并宣称他们不会保卫这样一个无法确保其生存的国家。"
+ russia.112.a: "这次我们需要干掉他们"
+ russia.113.t: "愤怒的爱国者奋起"
+ russia.113.d: "著名军人、志愿者、爱国者、经历过多次战争的士兵伊戈尔·斯特列科夫日前抵达顿涅茨克，他说顿巴斯的居民应该与我们作斗争，与罪犯和小偷的政府作斗争。"
+ russia.113.a: "顿巴斯已经背叛我们"
+ russia.114.t: "西伯利亚崛起"
+ russia.114.d: "西伯利亚活动分子在远东组织他们的共和国，并宣布不承认我国政府。现在我们几乎与远东断绝了联系。"
+ russia.114.a: "我们会得到它们。。。"
+ russia.115.t: "乌拉尔共和国回归"
+ russia.115.d: "乌拉尔共和国 - 90年代末罗塞尔州长的计划被叶利钦毁掉了。现在，乌拉尔人心中的复仇主义已经燃起，他们正在再次复兴前共和国。"
+ russia.115.a: "乌拉尔将为此付出代价。"
+ russia.116.t: "在北方的起义"
+ russia.116.d: "即使是自由派也能在这样的混乱中为自己分一杯羹。俄罗斯北部的自由主义者组成了一个政府，他们打算摧毁我们。"
+ russia.116.a: "就这？！"
+ NOV_limonka: "新俄罗斯"
