--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -2891,84 +2891,80 @@
  ###Wagner Content
  #Wagner Decision
  SOV_wagner_category: "Wagner PMC"
- SOV_wagner_category_desc: "\n\n\n\n\n\n£SOV_desctext_wagner\n\n\n\n\n\n\n\n\n[WAG.GetFlag]§YPMC Wagner§! is a [SOV.GetFlag]Russian non—state armed formation (private military company) with an unclear legal status, created and controlled by [SOV.GetFlag]Russian entrepreneur §RYevgeny Prigozhin§!. It has the status of a terrorist organization in a number of countries. \n\n[WAG.GetFlag]§YPMCs Wagner§! is not just a group of mercenaries, it is something more, this is a cult, this is a brotherhood, this is an army that will increase over time.\n\n[WAG.GetFlag]Power of §RPrigozhin§! is §Y[?SOV.wagnerbund]§!\n\n[WAG.GetFlag]Number of §RRecruits§! is §Y[?SOV.wagner]§!"
- SOV_found_wagner: "Found PMC Wagner"
+ SOV_wagner_category_desc: "\n\n\n\n\n\n£SOV_desctext_wagner\n\n\n\n\n\n\n\n\n[WAG.GetFlag]§YPMC Wagner§! is a [SOV.GetFlag]Russian non—state armed formation (private military company) with an unclear legal status, created and controlled by [SOV.GetFlag]Russian entrepreneur §RYevgeny Prigozhin§!. It has the status of a terrorist organization in a number of countries. \n\n[WAG.GetFlag]§YPMCs Wagner§! is not just a group of mercenaries, it is something more, this is a cult, this is a brotherhood, this is an army that will increase over time.\n\n[WAG.GetFlag]When §YPrigozhin's strength§! reaches §Y20§! or more, his loyal soldiers will start a §Rriot§! \n\n[WAG.GetFlag]Power of §RPrigozhin§! is §Y[?SOV.wagnerbund]§!\n\n[WAG.GetFlag]Number of §RRecruits§! is §Y[?SOV.wagner]§!"
+ SOV_found_wagner: "§YFound§! [WAG.GetFlag]PMC Wagner"
  SOV_found_wagner_desc: "At first we treated the Slavic Corps negatively, but realizing that such fighters can be useful to us, we are ready to use their experience for the benefit of our country"
- SOV_build_training_center: "Build a Training Center"
+ SOV_build_training_center: "§YBuild§! a Training Center"
  SOV_build_training_center_desc: "Our fighters must undergo the best training, so there must be a well-equipped training ground for them"
- SOV_start_advertising: "Start Advertising The Service in PMCs"
+ SOV_start_advertising: "§YStart§! Advertising The Service in PMCs"
  SOV_start_advertising_desc: "To attract employees, we need to have a good advertising network"
- SOV_invite_former_military: "Invite Former Military"
+ SOV_invite_former_military: "§YInvite§! Former Military"
  SOV_invite_former_military_desc: "Our PMCs need experienced instructors. Former military personnel who have passed through hot spots are ideal candidates"
- SOV_equipment_brigade: "Equip the First Brigade of Wagner"
+ SOV_equipment_brigade: "§YEquip§! the First Brigade of Wagner"
  SOV_equipment_brigade_desc: "It's time to equip our fighters with the best equipment that we can get for them"
- SOV_training_brigade: "Enhanced Training"
+ SOV_training_brigade: "§YEnhanced§! Training"
  SOV_training_brigade_desc: "Before being sent to a hot spot, our fighters will undergo a double training course to be ready for everything"
- SOV_sponsorship_creativity: "Sponsor Creativity Related to PMC"
+ SOV_sponsorship_creativity: "§YSponsor§! Creativity Related to PMC"
  SOV_sponsorship_creativity_desc: "Art, music videos, songs - all this will form the image of our PMCs, here we have to invest a lot of money"
- SOV_increase_payout: "Increase Payouts"
+ SOV_increase_payout: "§YIncrease§! Payouts"
  SOV_increase_payout_desc: "People are attracted to PMCs primarily by the opportunity to earn good money. Perhaps by increasing these payments, we will attract even more people"
- SOV_increase_social_guarantees: "Increase Social Guarantees"
+ SOV_increase_social_guarantees: "§YIncrease§! Social Guarantees"
  SOV_increase_social_guarantees_desc: "Social guarantees are no less important for our fighters, by increasing them we will attract even more candidates"
- SOV_permission_recruit_prisoners: "Request To Recruit People to Wagner From Prisons"
+ SOV_permission_recruit_prisoners: "§YRequest§! To Recruit People to Wagner From Prisons"
  SOV_permission_recruit_prisoners_desc: "In these difficult times, we need more people, we will have to go to extreme measures and use the services of prison inmates"
- SOV_path_private_army: "Private Army"
+ SOV_path_private_army: "§YPrivate§! Army"
  SOV_path_private_army_desc: "From a small PMCs, we are ready to become a full-fledged army that will lead our country to victory"
- SOV_visit_prisons: "Visit Prisons"
+ SOV_visit_prisons: "§YVisit§! Prisons"
  SOV_visit_prisons_desc: "We will have to go around a lot of prisons in our country to recruit soldiers for our PMCs"
- SOV_build_pmc_wagner_center: "Build a PMC Wagner Center"
+ SOV_build_pmc_wagner_center: "§YBuild§! a PMC Wagner Center"
  SOV_build_pmc_wagner_center_desc: "This building will become the mouthpiece of our propaganda, which will allow us to more actively promote the activities of our PMCs"
- SOV_wagner_party: "The Wagner Party"
+ SOV_wagner_party: "§YThe Wagner§! Party"
  SOV_wagner_party_desc: "Prigozhin's political ambitions are growing every day. Wagner has become not just a group of mercenaries, but already a full-fledged ideology on which many people rely. Now Prigozhin has his own party"
- SOV_lahtabots: "Use Kremlebots for PR"
+ SOV_lahtabots: "§YUse§! Kremlebots for PR"
  SOV_lahtabots_desc: "It's time to use our so-called Kremlebots, now for PR of the personality of Prigozhin himself and our party"
- SOV_serbs_verbovka: "Recruit Volunteers From [SER.GetNamewithFlag]"
+ SOV_serbs_verbovka: "§YRecruit§! Volunteers From [SER.GetNamewithFlag]"
  SOV_serbs_verbovka_desc: "Many Serbs are still with us, they are ready to contribute to Russia's victory, although their recruitment may complicate relations with the Serbian government"
- SOV_nidhogg: "Create a Nidhogg Squad From Natives Of [NOR.GetNamewithFlag]"
+ SOV_nidhogg: "§YCreate§! a Nidhogg Squad From Natives Of [NOR.GetNamewithFlag]"
  SOV_nidhogg_desc: "The unit is referred to as the "Níðhöggr", sometimes also known as Nidhogg, correlating to a dragon that is well-known in Norse mythology and has been seen upon various patches of this unit within the Wagner group."
- SOV_dshrg_rusich: "Sabotage Nd Assault Reconnaissance Group (DSHRG) "Rusich""
+ SOV_dshrg_rusich: "§YSabotage Nd Assault Reconnaissance Group§! (DSHRG) "Rusich""
  SOV_dshrg_rusich_desc: "Combat detachment of Russian neo-Nazis. Included in the PMCs "Wagner".Runes are used as symbols, in particular Tivaz, eight-beam rotifer, Valknut. Also, like many nationalists in Russia, they use code slogans and the "imperial" (black-yellow-white) flag."
- SOV_foreign_army: "Recruitment to the Foreign Legion"
+ SOV_foreign_army: "§YRecruitment§! to the Foreign Legion"
  SOV_foreign_army_desc: "Now that a foreigner can easily obtain citizenship by just serving in the Wagner PMCs, we will surely observe the ranks of volunteers."
- SOV_disband_belarus_mpc: "Withdraw mercenaries from [BLR.GetNamewithFlag]"
- SOV_disband_belarus_mpc_desc: "Our trust in the government of Belarus has been lost, it's time to withdraw our fighters from there"
- SOV_disband_armenia_mpc: "Withdraw mercenaries from [ARM.GetNamewithFlag]"
+ SOV_disband_armenia_mpc: "§YWithdraw§! mercenaries from [ARM.GetNamewithFlag]"
  SOV_disband_armenia_mpc_desc: "Our trust in the government of Armenia has been lost, it's time to withdraw our fighters from there"
- SOV_disband_abkhazia_mpc: "Withdraw mercenaries from [ABK.GetNamewithFlag]"
+ SOV_disband_abkhazia_mpc: "§YWithdraw§! mercenaries from [ABK.GetNamewithFlag]"
  SOV_disband_abkhazia_mpc_desc: "Our trust in the government of Abkhazia has been lost, it's time to withdraw our fighters from there"
- SOV_disband_comoros_mpc: "Withdraw mercenaries from [COM.GetNamewithFlag]"
+ SOV_disband_comoros_mpc: "§YWithdraw§! mercenaries from [COM.GetNamewithFlag]"
  SOV_disband_comoros_mpc_desc: "Our trust in the government of Comoros has been lost, it's time to withdraw our fighters from there"
- SOV_disband_iraq_mpc: "Withdraw mercenaries from [IRQ.GetNamewithFlag]"
+ SOV_disband_iraq_mpc: "§YWithdraw§! mercenaries from [IRQ.GetNamewithFlag]"
  SOV_disband_iraq_mpc_desc: "Our trust in the government of Iraq has been lost, it's time to withdraw our fighters from there"
- SOV_sirya_wagner: "The Syrian Campaign"
- SOV_sirya_wagner_desc: "It's time to help our Syrian brothers"
- SOV_sudan_wagner: "Influence in Africa - [SUD.GetNamewithFlag]"
+ SOV_sudan_wagner: "§YInfluence§! in Africa - [SUD.GetNamewithFlag]"
  SOV_sudan_wagner_desc: "We are ready to offer this country a profitable cooperation with us, in return it can become a sphere of our influence"
- SOV_niger_wagner: "Influence in Africa - [NGR.GetNamewithFlag]"
+ SOV_niger_wagner: "§YInfluence§! in Africa - [NGR.GetNamewithFlag]"
  SOV_niger_wagner_desc: "We are ready to offer this country a profitable cooperation with us, in return it can become a sphere of our influence"
- SOV_lybia_wagner: "Influence in Africa - [LBA.GetNamewithFlag]"
+ SOV_lybia_wagner: "§YInfluence§! in Africa - [LBA.GetNamewithFlag]"
  SOV_lybia_wagner_desc: "We are ready to offer this country a profitable cooperation with us, in return it can become a sphere of our influence"
- SOV_lybia_wagner_again: "Influence in Africa - [LBA.GetNamewithFlag]"
+ SOV_lybia_wagner_again: "§YInfluence§! in Africa - [LBA.GetNamewithFlag]"
  SOV_lybia_wagner_again_desc: "We are ready to offer this country a profitable cooperation with us, in return it can become a sphere of our influence"
- SOV_car_wagner: "Influence in Africa - [CAR.GetNamewithFlag]"
+ SOV_car_wagner: "§YInfluence§! in Africa - [CAR.GetNamewithFlag]"
  SOV_car_wagner_desc: "We are ready to offer this country a profitable cooperation with us, in return it can become a sphere of our influence"
- SOV_car_wagner_again: "Influence in Africa - [CAR.GetNamewithFlag]"
+ SOV_car_wagner_again: "§YInfluence§! in Africa - [CAR.GetNamewithFlag]"
  SOV_car_wagner_again_desc: ""
- SOV_mali_wagner: "Influence in Africa - [MAL.GetNamewithFlag]"
+ SOV_mali_wagner: "§YInfluence§! in Africa - [MAL.GetNamewithFlag]"
  SOV_mali_wagner_desc: "We are ready to offer this country a profitable cooperation with us, in return it can become a sphere of our influence"
- SOV_mali_wagner_again: "Influence in Africa - [MAL.GetNamewithFlag]"
+ SOV_mali_wagner_again: "§YInfluence§! in Africa - [MAL.GetNamewithFlag]"
  SOV_mali_wagner_again_desc: ""
- SOV_drc_wagner: "Influence in Africa - [DRC.GetNamewithFlag]"
+ SOV_drc_wagner: "§YInfluence§! in Africa - [DRC.GetNamewithFlag]"
  SOV_drc_wagner_desc: "We are ready to offer this country a profitable cooperation with us, in return it can become a sphere of our influence"
- SOV_drc_wagner_again: "Influence in Africa - [DRC.GetNamewithFlag]"
+ SOV_drc_wagner_again: "§YInfluence§! in Africa - [DRC.GetNamewithFlag]"
  SOV_drc_wagner_again_desc: ""
- SOV_first_brigade: "Form The First Brigade of PMCs Wagner"
+ SOV_first_brigade: "§YForm§! The First Brigade of PMCs Wagner"
  SOV_first_brigade_desc: "We are ready to send the first fighters of our PMCs into the mouth of war"
- SOV_second_brigade: "Second brigade of PMCs Wagner"
+ SOV_second_brigade: "§YSecond§! brigade of PMCs Wagner"
  SOV_second_brigade_desc: "Second brigade is already impatient to join the battle"
- SOV_new_type_brigade: "Prepare a New Brigade of PMCs Wagner"
+ SOV_new_type_brigade: "§YPrepare§! a New Brigade of PMCs Wagner"
  SOV_new_type_brigade_desc: "We have recruited enough volunteers to form a new brigade. It's time to prepare them for battle"
- SOV_tank_brigade: "Prepare Wagner's Tank Brigade"
+ SOV_tank_brigade: "§YPrepare§! Wagner's Tank Brigade"
  #Wagner Country Decision
  WAG_wagner_category: "Wagner PMC"
  WAG_wagner_category_desc: "PMC Wagner is a Russian non—state armed formation (private military company, PMC) with an unclear legal status, created and controlled by Russian entrepreneur Yevgeny Prigozhin. It has the status of a terrorist organization in a number of countries. \n\n PMCs Wagner is not just a group of mercenaries, it is something more, this is a cult, this is a brotherhood, this is an army that will increase over time. \n\n\n                                                 - §YNumber of Recruits is§! §G[?WAG.wagner]§! - "
