Fixed expenses becoming incomes

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -63,6 +63,7 @@ v1.10.0
   - Fixed AZE focus tree giving western drift instead of neutrality one
   - Added attack helicopter category to land unit special forces recon doctrine
   - Prevent North Korea from going down the nuclear focus tree unless certain conditions are met
+  - Fixed being able to get income from expenses
 
  Content:
   - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
