--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -3937,13 +3937,13 @@
 
  #Union of Sovereign State Focuses
  SOV_reassure_ruthenia: "Union of Sovereign States Project"
- SOV_reassure_ruthenia_desc: "This project was buried on the day when the USSR finally collapsed. Now he has a second chance, and we will not miss it"
- SOV_Sign_mutual_cooperation_agreements: "Membership in The USS"
- SOV_Sign_mutual_cooperation_agreements_desc: "It's time to send out invitations to the former countries of the Soviet Union. Perhaps many of them will be interested"
- SOV_Putting_out_the_fire_in_the_post-Soviet_space: "Establishment Of The Union"
- SOV_Putting_out_the_fire_in_the_post-Soviet_space_desc: "Now we will finally make sure who is really ready to join our union"
- SOV_Gorbachev_dream: "Create a Union of Sovereign States"
- SOV_Gorbachev_dream_desc: "Finally! We did it"
+ SOV_reassure_ruthenia_desc: "We will revive the long-standing confederation project - the Union of Sovereign States, which was conceived as an alternative to the USSR. We will invite some states to become members of the Union State in order to partially revive this project"
+ SOV_Sign_mutual_cooperation_agreements: "Membership of the Union State"
+ SOV_Sign_mutual_cooperation_agreements_desc: "We will send a request to the states that theoretically may be interested in membership in our Union State"
+ SOV_Putting_out_the_fire_in_the_post-Soviet_space: "Announce the Signing Ceremony of the Agreement"
+ SOV_Putting_out_the_fire_in_the_post-Soviet_space_desc: "We will schedule the signing ceremony of the Union Treaty and finally find out who is ready to become a member of our Union State"
+ SOV_Gorbachev_dream: "Expand the Union State"
+ SOV_Gorbachev_dream_desc: "The signing ceremony has taken place, now the latest documents will be signed and the Union State will become wider!"
 
 
  #Union of Sovereign State Decisions
