--- a/localisation/simp_chinese/MD_focus_PMR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_PMR_l_simp_chinese.yml
@@ -444,8 +444,8 @@
  PMR_guarantees_desc: "我们的公民必须拥有一切必要的社会保障才能感到安全。"
  PMR_democracy: "民主原则"
  PMR_democracy_desc: "民主的主要原则将在我们国家领土上得到尊重；极权主义和专制主义已经成为过去！"
- PMR_heatlh: "医疗保健投资"
- PMR_heatlh_desc: "我国的医疗保健行业实际上已经度过了最后的日子。现在是解决这个问题并向该行业直接注入现金的时候了。"
+ PMR_health: "医疗保健投资"
+ PMR_health_desc: "我国的医疗保健行业实际上已经度过了最后的日子。现在是解决这个问题并向该行业直接注入现金的时候了。"
  PMR_economic: "经济改革"
  PMR_economic_desc: "德涅斯特河沿岸前任领导人给我们留下了一个虚弱且腐败的经济体系。我们需要进行改革和放松管制。"
  PMR_family: "家庭是主要价值"
