--- a/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SOV_l_simp_chinese.yml
@@ -357,7 +357,7 @@
  SOV_discuss_nato_membership: "讨论北约成员资格问题"
  SOV_discuss_nato_membership_desc: "很长一段时间里，北约都是一个反俄同盟，但我们现在生活在一个新时代，我们早已改变了。他们肯定会理解我们，接纳我们的吧？"
  SOV_reassure_ruthenia: "主权国家联盟项目"
- SOV_reassure_ruthenia_desc: "这个项目在苏联最终崩溃的那一天被埋葬了。现在他有了第二次机会，我们不会错过的"
+ SOV_reassure_ruthenia_desc: "我们将恢复长期存在的联邦计划 - 主权国家联盟，该计划被认为是苏联的替代方案。我们将邀请一些国家成为联盟成员国，以部分恢复该项目。"
  SOV_the_european_question: "欧洲问题"
  SOV_the_european_question_desc: "侵略还是不侵略：这是个问题。"
  SOV_central_asian_partnership: "中亚伙伴关系"
@@ -1571,65 +1571,61 @@
  russia.29.o2: "一点点自治权不会对他们造成伤害"
  russia.29.o3: "我已经准备好亲自治理车臣"
  SOV_wagner_category: "瓦格纳私人军事公司"
- SOV_wagner_category_desc: "\n\n\n\n\n\n£SOV_desctext_wagner\n\n\n\n\n\n\n\n\n[WAG.GetFlag]§Y私人军事公司“瓦格纳”§!是一个法律地位不明确的[SOV.GetFlag]俄罗斯非国家武装组织，由[SOV.GetFlag]俄罗斯企业家§R叶夫根尼·普里戈任§!创建和控制。它在一些国家被定义为恐怖组织。\n\n [WAG.GetFlag]§Y私人军事公司“瓦格纳”§!不仅仅只是一群雇佣兵，它还有更多意义，它是邪教，它是兄弟情谊，它是一支随着时间推移而不断壮大的军队。\n\n[WAG.GetFlag]§R普里戈任的能量为§! §Y[?SOV.wagnerbund]§!\n\n[WAG.GetFlag]§R招募人数为§!§Y[?SOV.wagner]§! -"
- SOV_found_wagner: "组建瓦格纳集团"
+ SOV_wagner_category_desc: "\n\n\n\n\n\n£SOV_desctext_wagner\n\n\n\n\n\n\n\n\n[WAG.GetFlag]§Y私人军事公司“瓦格纳”§!是一个法律地位不明确的[SOV.GetFlag]俄罗斯非国家武装组织，由[SOV.GetFlag]俄罗斯企业家§R叶夫根尼·普里戈任§!创建和控制。它在一些国家被定义为恐怖组织。\n\n [WAG.GetFlag]§Y私人军事公司“瓦格纳”§!不仅仅只是一群雇佣兵，它还有更多意义，它是邪教，它是兄弟情谊，它是一支随着时间推移而不断壮大的军队。\n\n[WAG.GetFlag]当§Y普里戈任的能量§!达到§Y20§!或更高，他忠诚的士兵将开始一场§R暴乱§!\n\n[WAG.GetFlag]§R普里戈任§!的能量为§Y[?SOV.wagnerbund]§!\n\n[WAG.GetFlag]§R招募§!人数为§Y[?SOV.wagner]§!"
+ SOV_found_wagner: "§Y组建§![WAG.GetFlag]瓦格纳集团"
  SOV_found_wagner_desc: "起初我们对斯拉夫军团持负面态度，但意识到这样的战士对我们有用，我们准备利用他们的经验为我们的国家谋利。"
- SOV_build_training_center: "建设培训中心"
+ SOV_build_training_center: "§Y建设§!培训中心"
  SOV_build_training_center_desc: "我们的战士必须接受最好的训练，所以他们必须有一个设备齐全的训练场。"
- SOV_start_advertising: "开始宣传私人军事公司服务"
+ SOV_start_advertising: "§Y开始§!宣传私人军事公司服务"
  SOV_start_advertising_desc: "要吸引员工，我们需要有一个好的网络广告。"
- SOV_invite_former_military: "邀请前军人"
+ SOV_invite_former_military: "§Y邀请§!前军事人员"
  SOV_invite_former_military_desc: "我们的私人军事公司需要有经验的教官。曾经经历过热点地区的前军人是理想的候选人。"
- SOV_equipment_brigade: "装备私人军事公司第一旅"
+ SOV_equipment_brigade: "§Y装备§!私人军事公司第一旅"
  SOV_equipment_brigade_desc: "是时候给我们的战士配备我们能为他们提供的最好的装备了"
- SOV_training_brigade: "改进训练"
+ SOV_training_brigade: "§Y改进§!训练"
  SOV_training_brigade_desc: "在被派往一个热点地区之前，我们的战士将接受双重训练，以便为一切做好准备"
- SOV_sponsorship_creativity: "赞助与私人军事公司相关的创意活动"
+ SOV_sponsorship_creativity: "§Y赞助§!与私人军事公司相关的创意活动"
  SOV_sponsorship_creativity_desc: "艺术、音乐视频、歌曲——所有这些都将塑造我们私人军事公司的形象，我们必须在这方面投入大量的资金。"
- SOV_increase_payout: "增加支出"
+ SOV_increase_payout: "§Y增加§!支出"
  SOV_increase_payout_desc: "人们被私人军事公司吸引的主要原因是有机会赚取大钱。也许通过增加这些报酬，我们将吸引更多的人加入。"
  SOV_increase_social_guarantees_desc: "社会保障对我们的战士同样重要，透过增加社会保障，我们将吸引更多的候选人"
- SOV_permission_recruit_prisoners: "请求从监狱招募人员加入私人军事公司"
+ SOV_permission_recruit_prisoners: "§Y请求§!从监狱招募人员加入私人军事公司"
  SOV_permission_recruit_prisoners_desc: "在艰难的时刻，我们需要更多的人手，我们将不得不采取极端的措施，利用监狱囚犯来服务我们。 "
- SOV_path_private_army: "私兵"
+ SOV_path_private_army: "§Y私§!兵"
  SOV_path_private_army_desc: "从一个小型的私人军事公司，到成为一支完整的军队，我们将带领我们的国家走向胜利。"
- SOV_visit_prisons: "访问监狱"
+ SOV_visit_prisons: "§Y访问§!监狱"
  SOV_visit_prisons_desc: "我们将不得不走遍我们国家的许多监狱，为我们的私人军事公司招募士兵。 "
- SOV_build_pmc_wagner_center: "建立瓦格纳集团中心"
+ SOV_build_pmc_wagner_center: "§Y建立§!瓦格纳集团中心"
  SOV_build_pmc_wagner_center_desc: "这座建筑将成为我们宣传的喉舌，这将让我们更积极地推广我们的私人军事公司的活动。"
- SOV_wagner_party: "瓦格纳党"
+ SOV_wagner_party: "§Y瓦格纳§!党"
  SOV_wagner_party_desc: "普里戈任的政治野心每天都在增长。瓦格纳不仅仅是一个雇佣兵集团，而已经是一种许多人依赖的意识形态。现在普里戈任有了自己的政党。"
- SOV_lahtabots: "利用克里姆林宣传机器人进行公关"
+ SOV_lahtabots: "§Y利用§!克里姆林宣传机器人进行公关"
  SOV_lahtabots_desc: "是时候利用我们所谓的克里姆林宣传机器人，来推广普里戈任本人和我们的政党了。"
- SOV_serbs_verbovka: "在[SER.GetNamewithFlag]招募志愿者"
+ SOV_serbs_verbovka: "在[SER.GetNamewithFlag]§Y招募§!志愿者"
  SOV_serbs_verbovka_desc: "许多塞尔维亚人仍然与我们站在一起，他们愿意为俄罗斯的胜利做出贡献，尽管他们的招募可能会对与塞尔维亚政府的关系带来复杂性。"
- SOV_nidhogg: "从[NOR.GetNamewithFlag]的当地人中创建一个尼德霍格小队"
+ SOV_nidhogg: "从[NOR.GetNamewithFlag]的当地人中§Y创建§!一个尼德霍格小队"
  SOV_nidhogg_desc: "该单位被称为“尼德霍格”，与北欧神话中著名的龙有关，该龙在瓦格纳集团的各种标志上都能看到。"
- SOV_disband_belarus_mpc: "撤出[BLR.GetNamewithFlag]的雇佣兵"
- SOV_disband_belarus_mpc_desc: "我们已经失去对白俄罗斯政府的信任，是时候从那里撤出我们的战士了"
- SOV_disband_armenia_mpc: "撤出[ARM.GetNamewithFlag]的雇佣兵"
+ SOV_disband_armenia_mpc: "§Y撤出§![ARM.GetNamewithFlag]的雇佣兵"
  SOV_disband_armenia_mpc_desc: "我们已经失去对亚美尼亚政府的信任，是时候从那里撤出我们的战士了"
- SOV_disband_abkhazia_mpc: "撤出[ABK.GetNamewithFlag]]的雇佣兵"
+ SOV_disband_abkhazia_mpc: "§Y撤出§![ABK.GetNamewithFlag]]的雇佣兵"
  SOV_disband_abkhazia_mpc_desc: "我们已经失去对阿布哈兹政府的信任，是时候从那里撤出我们的战士了"
- SOV_disband_comoros_mpc: "撤出[COM.GetNamewithFlag]的雇佣兵"
+ SOV_disband_comoros_mpc: "§Y撤出§![COM.GetNamewithFlag]的雇佣兵"
  SOV_disband_comoros_mpc_desc: "我们已经失去对科摩罗政府的信任，是时候从那里撤出我们的战士了"
- SOV_sirya_wagner: "叙利亚战役"
- SOV_sirya_wagner_desc: "是时候帮助我们的叙利亚兄弟了"
- SOV_sudan_wagner: "在非洲的影响——[SUD.GetNamewithFlag]"
+ SOV_sudan_wagner: "在非洲的§Y影响§! - [SUD.GetNamewithFlag]"
  SOV_sudan_wagner_desc: "我们准备好与这个国家进行有利可图的合作，作为回报，它将成为我们的影响范围"
- SOV_lybia_wagner: "在非洲的影响 - [LBA.GetNamewithFlag]"
+ SOV_lybia_wagner: "在非洲的§Y影响§! - [LBA.GetNamewithFlag]"
  SOV_lybia_wagner_desc: "我们准备向这个国家提供与我们有利可图的合作，作为回报，它可以成为我们的影响范围。"
- SOV_car_wagner: "在非洲的影响 - [CAR.GetNamewithFlag]"
+ SOV_car_wagner: "在非洲的§Y影响§! - [CAR.GetNamewithFlag]"
  SOV_car_wagner_desc: "我们准备好与这个国家进行有利可图的合作，作为回报，它将成为我们的影响范围"
- SOV_mali_wagner: "在非洲的影响 - [MAL.GetNamewithFlag]"
+ SOV_mali_wagner: "在非洲的§Y影响§! - [MAL.GetNamewithFlag]"
  SOV_mali_wagner_desc: "我们准备好与这个国家进行有利可图的合作，作为回报，它将成为我们的影响范围"
- SOV_drc_wagner: "在非洲的影响 - [DRC.GetNamewithFlag]"
+ SOV_drc_wagner: "在非洲的§Y影响§! - [DRC.GetNamewithFlag]"
  SOV_drc_wagner_desc: "我们准备好与这个国家进行有利可图的合作，作为回报，它将成为我们的影响范围"
- SOV_first_brigade: "组建瓦格纳集团军第一旅"
+ SOV_first_brigade: "§Y组建§!瓦格纳集团军第一旅"
  SOV_first_brigade_desc: "我们已经准备好将我们集团的第一批战士派往战争的前线。"
- SOV_second_brigade: "瓦格纳集团军第二旅"
+ SOV_second_brigade: "瓦格纳集团军§Y第二§!旅"
  SOV_second_brigade_desc: "第二旅已经迫不及待地要加入战斗了"
- SOV_new_type_brigade: "准备一支新的瓦格纳集团旅。"
+ SOV_new_type_brigade: "§Y准备§!一支新的瓦格纳集团旅。"
  SOV_new_type_brigade_desc: "我们已经招募了足够的志愿者来组成一个新的旅。是时候让他们准备战斗了"
  SOV_wagner_tt: "新招募的人数将按§Y[?modify_wagner]§!\n"
  SOV_wagner_return_belarus_tt: "我们目前在白俄罗斯境内的我国雇佣军将被遣返回国。"
@@ -2566,15 +2562,15 @@
  SOV_moa_creating: "创建小俄罗斯"
  SOV_moa: "项目“小俄罗斯”"
  SOV_moa_desc: "媒体项目对于以前的当局来说非常困难，但我们在这些事情上更有经验，是时候迈向新的水平了。"
- SOV_dshrg_rusich: "破坏突击侦察小组\"鲁西奇\""
+ SOV_dshrg_rusich: "§Y破坏突击侦察小组§!\"鲁西奇\""
  SOV_dshrg_rusich_desc: "俄罗斯新纳粹分子的战斗支队。包含在私营军事公司“瓦格纳”中。符文用作符号，特别是蒂瓦兹、八束轮、死亡战士之结。此外，像俄罗斯的许多民族主义者一样，他们使用代码口号和“帝国”（黑黄白）旗帜。"
- SOV_foreign_army: "招募外籍军团"
+ SOV_foreign_army: "§Y招募§!外籍军团"
  SOV_foreign_army_desc: "既然外国人只要在私人军事公司瓦格纳服务就可以轻松获得公民身份，我们一定会观察志愿者的队伍。"
- SOV_disband_iraq_mpc: "撤出[IRQ.GetNamewithFlag]的雇佣兵"
+ SOV_disband_iraq_mpc: "§Y撤出§![IRQ.GetNamewithFlag]的雇佣兵"
  SOV_disband_iraq_mpc_desc: "我们对伊拉克政府失去了信任，是时候从那里撤出我们的战士了。"
- SOV_niger_wagner: "在非洲的影响 - [NGR.GetNamewithFlag]"
+ SOV_niger_wagner: "在非洲的§Y影响§! - [NGR.GetNamewithFlag]"
  SOV_niger_wagner_desc: "我们准备向这个国家提供与我们有利可图的合作，作为回报，它可以成为我们的影响范围。"
- SOV_tank_brigade: "准备瓦格纳的坦克旅"
+ SOV_tank_brigade: "§Y准备§!瓦格纳的坦克旅"
  WAG_wagner_category: "瓦格纳私人军事公司"
  WAG_wagner_category_desc: "瓦格纳集团是一个法律地位不明确的俄罗斯非国家武装组织（私营军事公司，PMC），由俄罗斯企业家叶夫根尼·普里戈任创建和控制。它在一些国家具有恐怖组织的地位。\n\n瓦格纳集团不仅仅是一群雇佣兵，这是更多的东西，这是邪教，这是兄弟情谊，这是一支随着时间的推移而不断壮大的军队。\n\n\n                                                  - §Y招募人数§! §G[?WAG.wagner]§! - "
  WAG_new_type_brigade: "组建新的瓦格纳旅"
@@ -3176,11 +3172,11 @@
  sov_sover_state.20.a: "有意思"
  autonomy_union_ss: "联邦主权共和国"
  SOV_Sign_mutual_cooperation_agreements: "苏联的成员"
- SOV_Sign_mutual_cooperation_agreements_desc: "是时候向前苏联的国家发出邀请了。也许他们中的很多人会感兴趣"
- SOV_Putting_out_the_fire_in_the_post-Soviet_space: "联盟的建立"
- SOV_Putting_out_the_fire_in_the_post-Soviet_space_desc: "现在我们终于要确定谁真正愿意加入我们的联盟"
- SOV_Gorbachev_dream: "创立主权国家联盟"
- SOV_Gorbachev_dream_desc: "终于！我们成功了"
+ SOV_Sign_mutual_cooperation_agreements_desc: "我们将向理论上可能有兴趣成为我们联盟国家成员的国家发送邀请。"
+ SOV_Putting_out_the_fire_in_the_post-Soviet_space: "宣布协议签署仪式"
+ SOV_Putting_out_the_fire_in_the_post-Soviet_space_desc: "我们将安排联盟条约的签署仪式，并最终找出谁准备好成为我们联盟国家的成员。"
+ SOV_Gorbachev_dream: "联盟国家的扩大"
+ SOV_Gorbachev_dream_desc: "签字仪式已经举行，现在将签署最新文件，联盟国家将变得更加广阔！"
  SOV_ssg_category: "主权国家联盟"
  SOV_ssg_category_desc: "主权国家联盟是一个改革苏联为一种更温和的联邦形式的项目。现在，我们有机会重新启动这个项目，并考虑到它的所有错误。"
  SOV_conflict_geo: "将§Y格鲁吉亚冲突§!的解决方案付诸表决"
@@ -3554,9 +3550,9 @@
  russia_governorate.8.t: "完成特尔斯克州一体化"
  russia_governorate.8.d: "我们终于完成了该区域的全面整合，消除了一切分裂主义的象征"
  russia_governorate.8.o1: "终于"
- SOV_mali_wagner_again: "在非洲的影响 - [MAL.GetNamewithFlag]"
+ SOV_mali_wagner_again: "在非洲的§Y影响§! - [MAL.GetNamewithFlag]"
  SOV_mali_wagner_again_desc: ""
- SOV_drc_wagner_again: "在非洲的影响 - [DRC.GetNamewithFlag]"
+ SOV_drc_wagner_again: "在非洲的§Y影响§! - [DRC.GetNamewithFlag]"
  SOV_drc_wagner_again_desc: ""
  GOV_BLR: "白俄罗斯州"
  GOV_DAG: "达吉斯坦省"
@@ -3635,7 +3631,7 @@
  russia_wagner.40.a: "很好"
  korea_agree: "§Y[NKO.GetNameWithFlag]§!同意"
  rival: "我们的主要敌人"
- SOV_lybia_wagner_again: "在非洲的影响 - [LBA.GetNamewithFlag]"
+ SOV_lybia_wagner_again: "在非洲的§Y影响§! - [LBA.GetNamewithFlag]"
  SOV_lybia_wagner_again_desc: "我们准备向这个国家提供与我们有利可图的合作，作为回报，它可以成为我们的影响范围。"
  SOV_borya_ded: "鲍里斯·叶利钦去世"
  russia_wagner.41.t: "正义进军"
@@ -3648,7 +3644,7 @@
  russia.60.b: "不行"
  SOV_create_mega_dpr: "顿涅茨克-克里沃罗格苏维埃共和国"
  SOV_create_mega_dpr_desc: "我们将复兴这个旧计划中的共和国。顿巴斯应该处于同一旗帜下，而不是单独的共和国形式。"
- SOV_car_wagner_again: "在非洲的影响 - [CAR.GetNamewithFlag]"
+ SOV_car_wagner_again: "在非洲的§Y影响§! - [CAR.GetNamewithFlag]"
  SOV_car_wagner_again_desc: ""
  SOV_koba_tooltip: "如果让这位将军发表演讲，未来可能会引发政变。"
  chip_otklonen: "拒绝购买芯片"
