--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -4320,8 +4320,8 @@
  SOV_russian_laizess_faire: "Russian Laizess Faire"
  SOV_russian_laizess_faire_desc: "The times of free capitalism is back! Time to fulfill our pockets with money!"
 
- sov_oligarchs.1.t: "Oligarchs' Putsch!"
- sov_oligarchs.1.d: "Due to unprecedented pressure from the government, Russian oligarchs decided that they won't hesitate and took power in their hands. Russian future is uncertain."
+ sov_oligarchs.1.t: "Government reshuffles!"
+ sov_oligarchs.1.d: "The oligarchs were not yet as powerful as they are now. Vladimir Putin's desire to gain the loyalty of the oligarchs by satisfying their interests has resulted in their influence on the political system only increasing! Now, in order not to upset the oligarchs, the Russian president will have to appoint ministers loyal to them to the government. We can say with certainty that the era of oligarchy is coming back again."
  sov_oligarchs.1.a: "God save Russia..."
  sov_oligarchs.2.t: "Guzinsky returns to Russia!"
  sov_oligarchs.2.d: "Russian media mogul, who was judged by previous Russian authotities returns to Russia!"
@@ -4330,11 +4330,15 @@
  sov_oligarchs.3.d: "Russia's most famous and rich oligarch, Boris Berezovskiy returns to Russia!"
  sov_oligarchs.3.a: "Like in 90's!"
  sov_oligarchs.4.t: "Semibankirshina takes power in Russia!"
- sov_oligarchs.4.d: "Internal strife within the interim government resulted in seven formerly very powerful Yeltsin oligarchs being able to remove all their rivals and take power. Now, within the Semibankirshina, it is being decided how the public authorities will be formed and who will take over the leadership positions. However, the most important question is who will take the presidency?"
+ sov_oligarchs.4.d: "Growing influence of oligarchs resulted in seven formerly very powerful Yeltsin oligarchs being able to remove all their rivals and take power. Now, within the Semibankirshina, it is being decided how the public authorities will be formed and who will take over the leadership positions. However, the most important question is who will be in charge?"
  sov_oligarchs.4.a: "Direct rule of the Council!"
- sov_oligarchs.4.b: "We will install a figurehead President."
- sov_oligarchs.4.c: "Boris Berezovsky will be the President."
- sov_oligarchs.4.e: "Mikhail Khodorkovsky will be the President."
+ sov_oligarchs.4.b: "We will hold new Election with another candidate."
+ sov_oligarchs.4.c: "We could manipulate the current President."
+ sov_oligarchs.5.t: "Rigged Elections!"
+ sov_oligarchs.5.d: "To legitimize our rule, we must hold new Presidential and Duma elections and we will try to ensure the victory of our Liberal Russia party. However, the main issue for the Semibankirshina is who will be the presidential candidate. We can nominate a figure that will suit everyone, or one of the olgiarchs will become a candidate. What will we do?"
+ sov_oligarchs.5.a: "Nevzorov is our candidate!."
+ sov_oligarchs.5.b: "Boris Berezovsky will be the President."
+ sov_oligarchs.5.c: "Mikhail Khodorkovsky will be the President."
  ##Oligarch Dynamic Modifier
  SOV_russian_oligarchs_modifier: "Oligarchic State"
  SOV_russian_oligarchs_tt_intro: "Modify §Y$SOV_russian_oligarchs_modifier$§! by"
