SOV separatistm mechanic and TAT rework

--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -982,6 +982,8 @@
  #Economic tree
  BLR_Expand_Mozyr_Refinery: "Expand Mozyr Oil Refinery"
  BLR_Expand_Mozyr_Refinery_desc: "We will expand this oil storage facility"
+ BLR_Belshina: "JSC Belshina"
+ BLR_Belshina_desc: "JSC Belshina is a manufacturer of automobile tires. It produces tires for passenger cars, trucks, heavy-duty vehicles, road construction and lifting vehicles, electric vehicles, buses, tractors and agricultural machinery"
  BLR_Expand_Naftan_Refinery: "Expand Naftan Oil Refinery"
  BLR_Expand_Naftan_Refinery_desc: "We will expand this oil storage facility"
  BLR_Expansion_Okolovsky_Novoselkovsky: "Expansion of Ore Production of Deposits"
