--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -5018,13 +5018,10 @@
  SOV_rosguard_wagner_desc: "After the death of Yevgeny Prigozhin, his PMCs began to fall apart before our eyes, some remained in Belarus, many quit, but some are ready to come under our direct control. We are ready to make them a part of Rosgvardiya"
 
  SOV_mvd_category: "[SOV.GetFlag]Ministry of Internal Affairs"
- SOV_mvd_category_desc: "\n\n\n\n\n\n£SOV_desctext_mvd\n\n\n\n\n\n\n\n\n§YThe Ministry of Internal Affairs of the [SOV.GetFlag]Russian Federation§!  is a federal executive authority responsible for the development and implementation of state policy and regulatory regulation in the field of internal affairs, in the field of control over the turnover of narcotic drugs, psychotropic substances and their precursors, in the field of migration, as well as law enforcement functions for federal state control (supervision) in the field of internal affairs"
- SOV_anti_tatar_separ: "§RSuppress§! §Y[TAT.GetFlag]Separatism§! Through The Media"
- SOV_anti_tatar_separ_desc: "Support for separatism is equal to: §Y[?TAT.subjectinped]§!"
- SOV_anti_tatar_separ_rosguard: "§RSuppress§! §Y[TAT.GetFlag]Separatism§! With The Help of Rosgvardiya"
- SOV_anti_tatar_separ_rosguard_desc: "Support for separatism is equal to: §Y[?TAT.subjectinped]§!"
- SOV_anti_tatar_separ_fsb: "§RSuppress§! §Y[TAT.GetFlag]Separatism§! With The Help of FSB"
- SOV_anti_tatar_separ_fsb_desc: "Support for separatism is equal to: §Y[?TAT.subjectinped]§!"
+ SOV_mvd_category_desc: "\n\n\n\n\n\n£SOV_desctext_mvd\n\n\n\n\n\n\n\n\n§YThe Ministry of Internal Affairs of the [SOV.GetFlag]Russian Federation§!  is a federal executive authority responsible for the development and implementation of state policy and regulatory regulation in the field of internal affairs, in the field of control over the turnover of narcotic drugs, psychotropic substances and their precursors, in the field of migration, as well as law enforcement functions for federal state control (supervision) in the field of internal affairs\n\n[SOV_TAT_separat]"
+ SOV_anti_tatar_separ: "§RSuppress§! §Y[TAT.GetNameWithFlag]Separatism§! Through The Media"
+ SOV_anti_tatar_separ_rosguard: "§RSuppress§! §Y[TAT.GetNameWithFlag]Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_tatar_separ_fsb: "§RSuppress§! §Y[TAT.GetNameWithFlag]Separatism§! With The Help of FSB"
  SOV_anti_wagner: "§RDeal With§! The Influence of Prigozhin"
  SOV_anti_kto: "§RSuppress§! Radicalization"
  SOV_grom_to_rosgvardia: "§YTransfer§! the Special purpose Unit §Y"Grom"§! to §RRosgvardiya§!"
@@ -5032,6 +5029,11 @@
  SOV_mobilise_sobr: "§YMobilize§! the §RSOBR§!"
  SOV_help_with_sheriff: "§YRussia§! has deal with §Rthe Sheriff§!"
  SOV_anti_sheriff: "Liberate §YTransnistria§! from the influence of §Rthe Sheriff§!"
+
+
+ SOV_TAT_separ_tt: "§RSeparatism§! in §Y[TAT.GetNameWithFlag]§! is equal to: §Y[?TAT.subjectinped]§!"
+
+
  sov_reunification_category: "Unification Of Russia"
  sov_reunification_category_desc: "The outcome of the war saw Russia fractionalized, with dust settled, we must endure the hardships of reunification.\nCurrent unification progress: [?THIS.reunification_progress]"
  start_talks_with_karelia: "Start unification talks with [KAE.GetNamewithFlag]"
