--- a/localisation/english/MD_focus_GRN_l_english.yml
+++ b/localisation/english/MD_focus_GRN_l_english.yml
@@ -341,8 +341,8 @@
  GRN_Utilize_More_Land:0 "Utilize more Land"
  GRN_Utilize_More_Land_desc:0 "Greenland is the largest island in the world. However, most of our land remains untouched and prestine tundra (or frozen glaciers...). So we should get to work on developing unclaimed land."
 
- GRN_Revise_Anti-Mining_Laws:0 "Abolish Anti-mining Laws"
- GRN_Revise_Anti-Mining_Laws_desc:0 "There are laws in place that present us from allowing large scale mining operations. If we were to abolish or reform this laws, we can enable large scale mining operations to take place. We can expand our domestic production and uncover more of our riches."
+ GRN_Revise_Anti_Mining_Laws:0 "Abolish Anti-mining Laws"
+ GRN_Revise_Anti_Mining_Laws_desc:0 "There are laws in place that present us from allowing large scale mining operations. If we were to abolish or reform this laws, we can enable large scale mining operations to take place. We can expand our domestic production and uncover more of our riches."
  
  GRN_Focus_on_Trade:0 "Focus on Trade"
  GRN_Focus_on_Trade_desc:0 "We don't have much use for resources in our country. But other countries might have, so we will focus on exporting our resources to global markets. It would help us generate a stable source of income."
@@ -527,7 +527,7 @@
  GRN_Offshore_Petroleum_Extraction:0 "Offshore Petroleum Extraction"
  GRN_The_Arctic_Petroleum_Superpower:0 "REPLACE_ME"
  GRN_Export_Nuclear_Fuel_Abroad:0 "Exporting Nuclear Fuel Abroad"
- GRN_Path_Foward:0 "The Path Foward"
+ GRN_Democratic_Path_Foward:0 "The Democratic Path Foward"
  GRN_Climate_Change_Inititives:0 "Climate Change Initiaves"
  GRN_Environmental_Industrial_Policies:0 "Environmental Industrial Policies"
  GRN_Promising_Future:0 "A More Promising Future"
@@ -581,17 +581,17 @@
  GRN_Chinese_Ties:0 "Soaring with the Chinese Dragon"
  GRN_Arctic_Silk_Road:0 "Arctic Silk Road"
  GRN_Near_Arctic_State:0 "Near Arctic State"
- GRN_Japanese_Ties:0 ""
+ GRN_Japanese_Ties:0 "Japanese Ties"
  GRN_jp1:0 "REPLACE_ME"
  GRN_roc1:0 "REPLACE_ME"
  GRN_rok1:0 "REPLACE_ME"
  GRN_high_tech:0 "REPLACE_ME"
  armydoctrine_bonus:0 "REPLACE_ME"
  airdoctrine_bonus:0 "REPLACE_ME"
- GRN_Join_NAFTA:0 "REPLACE_ME"
+ GRN_Join_NAFTA:0 "Joiing NAFTA"
  GRN_Join_Commonwealth:0 "REPLACE_ME"
  GRN_Rejoin_European_Union:0 "Rejoining the European Union"
- GRN_Join_Eurasian_Union:0 "REPLACE_ME"
+ GRN_Join_Eurasian_Union:0 "Joining the Eurasian Union"
  GRN_Join_SCO:0 "REPLACE_ME"
  GRN_Join_NATO:0 "Enhanced Commitment to NATO"
  GRN_Join_CSTO:0 "REPLACE_ME"
@@ -642,7 +642,7 @@
  GRN_Offshore_Petroleum_Extraction_desc:0 "REPLACE_ME"
  GRN_The_Arctic_Petroleum_Superpower_desc:0 "REPLACE_ME"
  GRN_Export_Nuclear_Fuel_Abroad_desc:0 "REPLACE_ME"
- GRN_Path_Foward_desc:0 "REPLACE_ME"
+ GRN_Democratic_Path_Foward_desc:0 "REPLACE_ME"
  GRN_Climate_Change_Inititives_desc:0 "REPLACE_ME"
  GRN_Environmental_Industrial_Policies_desc:0 "REPLACE_ME"
  GRN_Promising_Future_desc:0 "REPLACE_ME"
