--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -5026,6 +5026,9 @@
  SOV_anti_tatar_separ: "§RSuppress§! §Y[TAT.GetNameWithFlag] Separatism§! Through The Media"
  SOV_anti_tatar_separ_rosguard: "§RSuppress§! §Y[TAT.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
  SOV_anti_tatar_separ_fsb: "§RSuppress§! §Y[TAT.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_bashkir_separ: "§RSuppress§! §Y[BSH.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_bashkir_separ_rosguard: "§RSuppress§! §Y[BSH.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_bashkir_separ_fsb: "§RSuppress§! §Y[BSH.GetNameWithFlag] Separatism§! With The Help of FSB"
  SOV_anti_wagner: "§RDeal With§! The Influence of Prigozhin"
  SOV_grom_to_rosgvardia: "§YTransfer§! the Special purpose Unit §Y"Grom"§! to §RRosgvardiya§!"
  SOV_mobilise_omon: "§YMobilize§! the §ROMON§!"
