--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -3831,8 +3831,8 @@
 
  HAM_neutrality: "Hamas"
  HAM_neutrality_DEF: "Hamas"
- HAM_democratic: "Hamas"
- HAM_democratic_DEF: "Hamas"
+ HAM_democratic: "Gaza Strip"
+ HAM_democratic_DEF: "Gaza Strip"
  HAM_fascism: "Hamas"
  HAM_fascism_DEF: "Hamas"
  HAM_communism: "Hamas"
