--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -4319,6 +4319,8 @@
  SOV_back_to_the_west_desc: "A rival with Western powers kills our economy and makes our country worser, it is time to get rid of Soviet-style foreign policy and establish a long-lasting peace with our Western partners."
  SOV_russian_laizess_faire: "Russian Laizess Faire"
  SOV_russian_laizess_faire_desc: "The times of free capitalism is back! Time to fulfill our pockets with money!"
+ SOV_oligarchs_democracy: "Blinded by their Promises"
+ SOV_oligarchs_democracy_desc: "The victory of the political forces linked to the former Yeltsin oligarchs in the general elections came as a shock to the country, especially to the electorate that had been in favor of them. Blinded by promises, voters voted for those who had recently plundered Russia"
 
  sov_oligarchs.1.t: "Government reshuffles!"
  sov_oligarchs.1.d: "The oligarchs were not yet as powerful as they are now. Vladimir Putin's desire to gain the loyalty of the oligarchs by satisfying their interests has resulted in their influence on the political system only increasing! Now, in order not to upset the oligarchs, the Russian president will have to appoint ministers loyal to them to the government. We can say with certainty that the era of oligarchy is coming back again."
