events addon, yemen focus function edits

--- a/localisation/english/MD_focus_YEM_l_english.yml
+++ b/localisation/english/MD_focus_YEM_l_english.yml
@@ -23,6 +23,8 @@
  foriegn_influence_tt: "§YEU Investors influence will increase on us!§!"
  radicalizeing_pepole_tt: "§YThis will radicalize more people!§!"
  wmo_praises_us_tt: "§YThe WMO will award us $10 billion for our sustainable efforts!§!"
+ found_aqui_tt: "§YWe found Aquifers and we will get a profit from this!§!"
+ notfound_aqui_tt: "§YNo aquifers found, But we keep going!§!"
 
  YEM_raincatchers: "Raincatchers"
  dec1_selected: "Currently taking Counter-Terror Decision"
