--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,7 @@ v1.10.0
   - Gigantic military spending(level 6) is now maximum expected military spending during war
   - Lower power ranking now has a penalty to Foreign Influence when influencing abroad (Superpower can influence anywhere without any reductions)
   - Added Army Personnel Cost increase to Night Vision techs
+  - Added a monthly Domestic Independence Tick to make Influence slightly harder
 
  Bugfixes:
   - Fixed a bug when the opinion modifiers reached 100 or -100 due to an incorrectly configured decay
