--- a/localisation/english/MD_influence_l_english.yml
+++ b/localisation/english/MD_influence_l_english.yml
@@ -17,6 +17,7 @@
  influence_for_autonomy_decision_autonomy: "Overlord Reduced Our Autonomy"
  enable_auto_influence_notification_decision: "§GEnable§! Auto-Influence Monthly Report"
  disable_auto_influence_notification_decision: "§RDisable§! Auto-Influence Monthly Report"
+ recruit_difficulty_tt: "Disables the Monthly §YDomestic Independence§! Tick"
 
  # Scripted GUI Section
  DOMESTIC_INFLUENCE_TOOLTIP: "[FROM.GetNameWithFlag] has a level of independence from foreign influence of [?domestic_influence_amount|H%%]."
