--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -126,7 +126,7 @@
  foreign_influence_home_continent_modifier: "£foreign_influence_modifier_texticon §YForeign Influence§! In Home Continent"
  foreign_influence_monthly_domestic_independence_gain_modifier: "£foreign_influence_modifier_texticon Monthly §YDomestic Independence§! Gain"
  foreign_influence_monthly_domestic_independence_gain_factor: "£foreign_influence_modifier_texticon Monthly §YDomestic Independence§! Gain Factor"
- foreign_influence_auto_influence_cap_modifier: "£foreign_influence_auto_influence_cap_modifier_texticon §YForeign Influence§! Auto-Influence Cap"
+ foreign_influence_auto_influence_cap_modifier: "£foreign_influence_auto_influence_cap_modifier_texticon §YForeign Influence§! Auto-Influence Target Cap"
  tax_gain_multiplier_modifier: "£tax_gain_multiplier_modifier_texticon §YTax Revenue§! Multiplier"
  interest_rate_multiplier_modifier: "£interest_rate_multiplier_modifier_texticon §YInterest Rate§!"
  personnel_cost_multiplier_modifier: "£personnel_cost_multiplier_modifier_texticon §YMilitary Cost§! Multiplier"
