--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -5024,13 +5024,16 @@
  SOV_rosguard_wagner_desc: "After the death of Yevgeny Prigozhin, his PMCs began to fall apart before our eyes, some remained in Belarus, many quit, but some are ready to come under our direct control. We are ready to make them a part of Rosgvardiya"
 
  SOV_mvd_category: "[SOV.GetFlag]Ministry of Internal Affairs"
- SOV_mvd_category_desc: "\n\n\n\n\n\n£SOV_desctext_mvd\n\n\n\n\n\n\n\n\n§YThe Ministry of Internal Affairs of the [SOV.GetFlag]Russian Federation§!  is a federal executive authority responsible for the development and implementation of state policy and regulatory regulation in the field of internal affairs, in the field of control over the turnover of narcotic drugs, psychotropic substances and their precursors, in the field of migration, as well as law enforcement functions for federal state control (supervision) in the field of internal affairs\n\n[SOV_TAT_separat]\n\n[SOV_BSH_separat]"
+ SOV_mvd_category_desc: "\n\n\n\n\n\n£SOV_desctext_mvd\n\n\n\n\n\n\n\n\n§YThe Ministry of Internal Affairs of the [SOV.GetFlag]Russian Federation§!  is a federal executive authority responsible for the development and implementation of state policy and regulatory regulation in the field of internal affairs, in the field of control over the turnover of narcotic drugs, psychotropic substances and their precursors, in the field of migration, as well as law enforcement functions for federal state control (supervision) in the field of internal affairs\n\n[SOV_TAT_separat]\n\n[SOV_BSH_separat]\n\n[SOV_CHE_separat]"
  SOV_anti_tatar_separ: "§RSuppress§! §Y[TAT.GetNameWithFlag] Separatism§! Through The Media"
  SOV_anti_tatar_separ_rosguard: "§RSuppress§! §Y[TAT.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
  SOV_anti_tatar_separ_fsb: "§RSuppress§! §Y[TAT.GetNameWithFlag] Separatism§! With The Help of FSB"
  SOV_anti_bashkir_separ: "§RSuppress§! §Y[BSH.GetNameWithFlag] Separatism§! Through The Media"
  SOV_anti_bashkir_separ_rosguard: "§RSuppress§! §Y[BSH.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
  SOV_anti_bashkir_separ_fsb: "§RSuppress§! §Y[BSH.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_chechen_separ: "§RSuppress§! §Y[CHE.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_chechen_separ_rosguard: "§RSuppress§! §Y[CHE.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_chechen_separ_fsb: "§RSuppress§! §Y[CHE.GetNameWithFlag] Separatism§! With The Help of FSB"
  SOV_anti_wagner: "§RDeal With§! The Influence of Prigozhin"
  SOV_grom_to_rosgvardia: "§YTransfer§! the Special purpose Unit §Y"Grom"§! to §RRosgvardiya§!"
  SOV_mobilise_omon: "§YMobilize§! the §ROMON§!"
@@ -5041,6 +5044,7 @@
 
  SOV_TAT_separ_tt: "§RSeparatism§! in §Y[TAT.GetNameWithFlag]§! is equal to: §Y[?TAT.subjectinped]§!"
  SOV_BSH_separ_tt: "§RSeparatism§! in §Y[BSH.GetNameWithFlag]§! is equal to: §Y[?BSH.subjectinped]§!"
+ SOV_CHE_separ_tt: "§RSeparatism§! in §Y[CHE.GetNameWithFlag]§! is equal to: §Y[?CHE.subjectinped]§!"
 
 
  sov_reunification_category: "Unification Of Russia"
